# gleem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
c++-impl/: BSphere.cpp  BSphere.h  CameraParameters.h  ExaminerViewer.cpp  ExaminerViewer.h  GleemDLL.h  HitPoint.h  Line.cpp  Makefile  ManipManager.cpp  ManipPart.cpp  ManipPart.h  ManipPartCube.cpp  ManipPartCube.h  ManipPartGroup.cpp  ManipPartTransform.cpp  ManipPartTransform.h  ManipPartTriBased.cpp  ManipPartTwoWayArrow.cpp  MathUtil.cpp  Namespace.h  NormalCalc.cpp  NormalCalc.h  Plane.cpp  Plane.h  PlaneUV.cpp  PlaneUV.h  README-WINDOWS.txt  RightTruncPyrMapping.cpp  TestExaminerViewer.cpp  Translate1Manip.cpp  Translate2Manip.cpp  Translate2Manip.h  _Linalg.cpp  _Linalg.h
c++-impl/stl/: mstring.h
c++-impl/visualc/: TestExaminerViewer.dsp  TestHandleBox.dsp  TestMultiWin.dsp  TestTranslate1.dsp  TestTranslate2.dsp  gleem.dsw  gleemdll.dsp
doc/: index.html
gl4java-impl/: BSphere.java  BSphereProvider.java  CameraParameters.java  ExaminerViewer.java  HandleBoxManip.java  HitPoint.java  Manip.java  ManipManager.java  ManipMotionListener.java  ManipPart.java  ManipPartCube.java  ManipPartGroup.java  ManipPartLineSeg.java  ManipPartSquare.java  ManipPartTransform.java  ManipPartTriBased.java  ManipPartTwoWayArrow.java  MouseButtonHelper.java  NormalCalc.java  RayTriangleIntersection.java  RightTruncPyrMapping.java  ScreenToRayMapping.java  TestExaminerViewer.java  TestHandleBox.java  TestMultiWin.java  TestTranslate1.java  TestTranslate2.java  Translate1Manip.java  Translate2Manip.java  WindowUpdateListener.java  package.html
gl4java-impl/linalg/: DimensionMismatchException.java  IntersectionPoint.java  Line.java  Mat2f.java  Mat3f.java  Mat4f.java  Matf.java  MathUtil.java  NonSquareMatrixException.java  Plane.java  PlaneUV.java  Rotf.java  SingularMatrixException.java  Vec2f.java  Vec3d.java  Vec3f.java  Vec4f.java  Vecf.java  Veci.java
include/: BSphere.h  BasicHashtable.h  CameraParameters.h  ExaminerViewer.h  HandleBoxManip.h  HitPoint.h  Linalg.h  Line.h  Manip.h  ManipManager.h  ManipPart.h  ManipPartCube.h  ManipPartGroup.h  ManipPartHollowCubeFace.h  ManipPartLineSeg.h  ManipPartSquare.h  ManipPartTransform.h  ManipPartTriBased.h  ManipPartTwoWayArrow.h  MathUtil.h  NormalCalc.h  Plane.h  PlaneUV.h  RayTriangleIntersection.h  RightTruncPyrMapping.h  ScreenToRayMapping.h  Translate1Manip.h  Translate2Manip.h  _Linalg.h  defalloc.h  mstring.h  numeric  stl_algobase.h  stl_construct.h  stl_iterator.h
src/: BSphere.cpp  BSphere.h  BasicHashtable.h  CameraParameters.h  ExaminerViewer.cpp  ExaminerViewer.h  HandleBoxManip.cpp  HandleBoxManip.h  HitPoint.h  Linalg.h  Line.cpp  Line.h  Manip.cpp  Manip.h  ManipManager.cpp  ManipManager.h  ManipPart.cpp  ManipPart.h  ManipPartCube.cpp  ManipPartCube.h  ManipPartGroup.cpp  ManipPartGroup.h  ManipPartHollowCubeFace.cpp  ManipPartHollowCubeFace.h  ManipPartLineSeg.cpp  ManipPartLineSeg.h  ManipPartSquare.cpp  ManipPartSquare.h  ManipPartTransform.cpp  ManipPartTransform.h  ManipPartTriBased.cpp  ManipPartTriBased.h  ManipPartTwoWayArrow.cpp  ManipPartTwoWayArrow.h  MathUtil.cpp  MathUtil.h  NormalCalc.cpp  NormalCalc.h  Plane.cpp  Plane.h  (+19 more)
src/stl/: algo.h  alloc.h  bool.h  bvector.h  defalloc.h  deque.h  hash_map.h  hash_set.h  hashtable.h  iterator  iterator.h  limits  map  map.h  memory  mstring.h  multimap.h  multiset.h  numeric  pthread_alloc  pthread_alloc.h  rope  ropeimpl.h  set  (+11 more)
